# how-to-cmake

./: .gitignore  .travis.yml  README.md
Project1/: CMakeLists.txt  main1.cpp
Project1/Lib1/: CMakeLists.txt  Lib1.cpp  Lib1.h
Project2/: CMakeLists.txt  main2.cpp
Project2/Lib2/: CMakeLists.txt  Lib2.cpp
Project2/Lib3/: CMakeLists.txt  Lib3.cpp  Lib3.h
Project2/cmake/: GenericPackageConfig.cmake.in
Project3/: CMakeLists.txt  main3.cpp
